--- a/package.json
+++ b/package.json
@@ -4,34 +4,37 @@
     "description": "A simple React-based String Calculator application.",
     "main": "src/index.js",
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "repository": {
-      "type": "git",
-      "url": "https://github.com/Rahul-Abhishek-AU6/String-Calculator.git"
+        "type": "git",
+        "url": "https://github.com/Rahul-Abhishek-AU6/String-Calculator.git"
     },
     "author": "Your Name",
     "license": "GPL-3.0",
     "dependencies": {
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-scripts": "^5.0.1"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.1"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/react": "^16.0.0",
+        "jest": "^27.5.1"
+    },
     "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
-  }
-  
+}
